# Larrys_Gym_Tracker

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Procfile  README.md  client_secrets.json  config copy.json  config.example.json  credentials.json  pyproject.toml  requirements.txt  settings.yaml  setup.py  setup_server.sh
.github/workflows/: deploy.yml
cli/: args.py  events.py  main.py
data/: F＊CK HER RIGHT IN THE PUSSY - Sound Effect (HD).webm  Metal Bar Sound Effect.webm  points.csv  voice_log.csv
dev/: util.py
notebooks/: data_dedup.ipynb  larrys_assistant.ipynb
src/: backend.py  bot.py  commands.py  config.py  events.py  exercise.py  openai.py  profiles.py  realtime.py  tasks.py  tts.py  types.py  util.py  voice_capture.py
src/extensions/: larrys_stock_trader.py  year_in_review.py
src/extensions/gambling/: sports_betting.py
src/extensions/music_player/: youtube.py
src/extensions/news/: larrys_news_recommender.py
src/extensions/realtime/: audio_processor.py  openai_client.py  realtime_cog.py  voice_handler.py
src/extensions/sleep_tracker/: sleep.py
src/extensions/stock_trading/: larrys_stock_trader.py  types.py
tests/: test_larrys_stock_trader.py
web_config/: __init__.py  app.py  run.py
web_config/static/css/: style.css
web_config/static/js/: script.js
web_config/templates/: discord_guide.html  index.html
~/.ssh/: config
