[project]
name = "larrys-gym-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "discord-ext-voice-recv",
    "discord-py[voice]>=2.4.0",
    "dropbox>=12.0.2",
    "finnhub-python>=2.4.24",
    "flask>=2.0.0",
    "mutagen>=1.47.0",
    "newsapi-python>=0.2.7",
    "numpy>=2.3.1",
    "openai>=1.95.1",
    "pandas>=2.3.1",
    "pydrive>=1.3.1",
    "pydub>=0.25.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "tabulate>=0.9.0",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
    "werkzeug>=2.0.0",
    "yt-dlp>=2025.6.30",
]

[tool.uv.sources]
discord-ext-voice-recv = { git = "https://github.com/JordanLevy99/discord-ext-voice-recv.git" }
